--- a/vue/package.json
+++ b/vue/package.json
@@ -13,10 +13,13 @@
     "@heroicons/vue": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.3",
+    "moment": "^2.29.4",
+    "pinia": "^2.0.29",
     "vue": "^3.2.36",
     "vue-router": "^4.0.13",
     "vue-sweetalert2": "^5.0.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
